klusrc/deployments/immich/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-immich
spec:
  parentRefs:
  - name: envoy
    namespace: gateways
  rules:
    - backendRefs:
      - name: immich-server
        port: 2283
